Fixed alignment for quote. Also fixed alignment and sizes for button and img in sec1

--- a/style.css
+++ b/style.css
@@ -68,17 +68,22 @@
 }
 
 .right-img {
+    align-items: center;
     align-self: stretch;
-    width: 500px;
-    margin: 100px 100px;
+    width: 25rem;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
 }
 
 button {
+    align-self: flex-start;
     background-color: #3882f6;
     color: #f9faf8;
-    width: 5rem;
-    height: 1.5rem;
+    width: 10rem;
+    height: 2rem;
     border-radius: 0.75rem;
+    font-size: 16px;
+    margin-top: 1rem;
 }
 
 .sec2 {
@@ -103,7 +108,10 @@ button {
 }
 
 .subtext {
-
+    padding-left: 3rem;
+    width: 50%;
+    font-size: 14px;
+    font-style: italic;
 }
 
 .sec3 {
@@ -115,7 +123,15 @@ button {
 }
 
 .quote {
-   padding: 5rem 5rem;
+    padding: 5rem 5rem;
+}
+
+.thor {
+    display: flex;
+    justify-content: flex-end;
+    font-weight: bolder;
+    padding-left: 5rem;
+    padding-top: 2rem;
 }
 
 .sec4 {
